--- a/metis-web/packages/web/src/layout/SplitLayout.module.css
+++ b/metis-web/packages/web/src/layout/SplitLayout.module.css
@@ -47,6 +47,7 @@
   .left {
     flex: 1 1 auto !important;
     overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .divider {
